add section header and informations

--- a/index.html
+++ b/index.html
@@ -5,6 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+    <link rel="stylesheet" href="./css/main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wropper">
+      <!--HEADER-->
+      <header class="header">
+        <div class="container">
+          <h1 class="heading">Our Pricing</h1>
+
+          <div class="button">
+            <span class="text-sm text-common" for="annually">Annually</span>
+            <button
+              class="button-annually"
+              type="button"
+              id="annually"
+            ></button>
+            <button class="button-monthly" type="button" id="monthly"></button>
+            <span class="text-sm text-common" for="monthly">Annually</span>
+          </div>
+        </div>
+      </header>
+
+      <main class="main">
+        <!--INFORMATIONS-->
+        <div class="container">
+          <div class="informations">
+            <div class="basic informations__content">
+              <div class="informations__title text-md text-common">Basic</div>
+              <p class="price text-lg text-common">$ 19.99</p>
+              <p class="info text-sm text-common">500 GB Storage</p>
+              <p class="info text-sm text-common">2 Users Allowed</p>
+              <p class="info text-sm text-common">Send up to 3 GB</p>
+              <button class="button button__blue">LEARN MORE</button>
+            </div>
+
+            <div class="professional informations__content">
+              <div class="informations__title text-md text-common">
+                Professional
+              </div>
+              <p class="price text-lg text-common">$ 24.99</p>
+              <p class="info text-sm text-common">1 TB Storage</p>
+              <p class="info text-sm text-common">5 Users Allowed</p>
+              <p class="info text-sm text-common">Send up to 3 GB</p>
+              <button class="button button__white">Send up to 10 GB</button>
+            </div>
+
+            <div class="master informations__content">
+              <div class="informations__title text-md text-common">Master</div>
+              <p class="price text-lg text-common">$ 39.99</p>
+              <p class="info text-sm text-common">2 TB Storage</p>
+              <p class="info text-sm text-common">10 Users Allowed</p>
+              <p class="info text-sm text-common">Send up to 20 GB</p>
+              <button class="button button__blue">LEARN MORE</button>
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
+  </body>
 </html>
