--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
           <h1 class="heading">Our Pricing</h1>
 
-          <div class="button">
+          <div class="button__header">
             <span class="text-sm text-common" for="annually">Annually</span>
             <button
               class="button-annually"
@@ -42,13 +42,13 @@
             </div>
 
             <div class="professional informations__content">
-              <div class="informations__title text-md text-common">
+              <div class="informations__title text-md text-white">
                 Professional
               </div>
-              <p class="price text-lg text-common">$ 24.99</p>
-              <p class="info text-sm text-common">1 TB Storage</p>
-              <p class="info text-sm text-common">5 Users Allowed</p>
-              <p class="info text-sm text-common">Send up to 3 GB</p>
+              <p class="price text-lg text-white">$ 24.99</p>
+              <p class="info text-sm text-white">1 TB Storage</p>
+              <p class="info text-sm text-white">5 Users Allowed</p>
+              <p class="info text-sm text-white">Send up to 3 GB</p>
               <button class="button button__white">Send up to 10 GB</button>
             </div>
 
